--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 		</div>
 
 		<div class="row">
-			<div class="col-sm-6"><p class="text-justify">Saya, Audrey Saudjhana. Kelahiran Batam, 16 November 2001. Anak pertama dan terakhir di rumah. Bersekolah di PG Bodhi Dharma Batam, TK Bodhi Dharma Batam, SD Bodhi Dharma Batam, SMP Bodhi Dharma Batam, dan SMA Bodhi Dharma Batam. Sekarang, berkuliah di Universitas Internasional Batam dan mengambil program studi Sistem Informasi.</p>
+			<div class="col-sm-6"><p class="text-justify">My name is Audrey Saudjhana, was born in Batam, 16th November 2001. First and last child at home. I went to PG Bodhi Dharma Batam (Play Group), TK Bodhi Dharma Batam (Taman Kanak-kanak/Kindergarten), SD Bodhi Dharma Batam (Primary School), SMP Bodhi Dharma Batam (Junior High School), and SMA Bodhi Dharma Batam (Senior High School. Now, I am student in Universitas Internasional Batam (UIB) and majored in Information System.</p>
 			</div>
 
-			<div class="col-sm-6"><p  class="text-justify">Memiliki hobi berenang dan bulu tangkis. Selain itu, senang belajar hal baru, terutama yang berkaitan dengan programming. Walaupun belum pernah menyentuh programming semasa sekolah, tetapi tertarik dengan hal yang berkaitan dengan koding.</p>
+			<div class="col-sm-6"><p  class="text-justify">My hobbies are swimming and badminton. I like both watching the badminton's matches and play the sport, because badminton is really fun for me. Beside that, I am passionate about learning new things, especially coding and programming related.</p>
 			</div>
 		</div>
 
