--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   					<img src="img/web-2.png" class="card-img-top" alt="Sublime CV">
   					<div class="card-body">
     					<p class="card-text">Website untuk CV kelompok, yaitu CV dari Kelompok Sublime (Sublime's CV).</p>
-    					<a href="./sublime-cv/index.html" target="_blank" class="btn btn-dark">Lihat selengkapnya</a>
+    					<a href="audreysaudjhana.github.io/sublimecv" target="_blank" class="btn btn-dark">Lihat selengkapnya</a>
   					</div>
 				</div>
 			</div>
@@ -82,7 +82,7 @@
   					<img src="img/web-3.png" class="card-img-top" alt="Sublime Biodata">
   					<div class="card-body">
     					<p class="card-text">Website untuk biodata kelompok, yaitu biodata dari Kelompok Sublime (Sublime's biodata).</p>
-    					<a href="./sublime-biodata/biodata.html" target="_blank" class="btn btn-dark">Lihat selengkapnya</a>
+    					<a href="audreysaudjhana.github.io/sublimebiodata" target="_blank" class="btn btn-dark">Lihat selengkapnya</a>
   					</div>
 				</div>
 			</div>
