--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="card" style="width: 100%;">
-  					<img src="img/web-1.png" class="card-img-top" alt="Kerangka Website">
+  					<img src="img/web-3.png" class="card-img-top" alt="Sublime Biodata">
   					<div class="card-body">
-    					<p class="card-text">Kerangka website pertama saya.</p>
-    					<a href="./kerangka-website-audrey/latihan.html" target="_blank" class="btn btn-dark">Lihat selengkapnya</a>
+    					<p class="card-text">Website for biodata of group, biodata from Sublime Group (Sublime's Biodata).</p>
+    					<a href="audreysaudjhana.github.io/sublimebiodata" target="_blank" class="btn btn-dark">View more</a>
   					</div>
 				</div>
 			</div>
@@ -71,8 +71,8 @@
 				<div class="card" style="width: 100%;">
   					<img src="img/web-2.png" class="card-img-top" alt="Sublime CV">
   					<div class="card-body">
-    					<p class="card-text">Website untuk CV kelompok, yaitu CV dari Kelompok Sublime (Sublime's CV).</p>
-    					<a href="audreysaudjhana.github.io/sublimecv" target="_blank" class="btn btn-dark">Lihat selengkapnya</a>
+    					<p class="card-text">Website for CV of group, biodata from Sublime Group (Sublime's CV).</p>
+    					<a href="audreysaudjhana.github.io/sublimecv" target="_blank" class="btn btn-dark">View more</a>
   					</div>
 				</div>
 			</div>
@@ -81,8 +81,8 @@
 				<div class="card" style="width: 100%;">
   					<img src="img/web-3.png" class="card-img-top" alt="Sublime Biodata">
   					<div class="card-body">
-    					<p class="card-text">Website untuk biodata kelompok, yaitu biodata dari Kelompok Sublime (Sublime's biodata).</p>
-    					<a href="audreysaudjhana.github.io/sublimebiodata" target="_blank" class="btn btn-dark">Lihat selengkapnya</a>
+    					<p class="card-text">Website for biodata of group, biodata from Sublime Group (Sublime's Biodata).</p>
+    					<a href="audreysaudjhana.github.io/sublimebiodata" target="_blank" class="btn btn-dark">View more</a>
   					</div>
 				</div>
 			</div>
