--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 				<div class="card" style="width: 100%;">
   					<img src="img/web-3.png" class="card-img-top" alt="Sublime Biodata">
   					<div class="card-body">
-    					<p class="card-text">Website for biodata of group, biodata from Sublime Group (Sublime's Biodata).</p>
-    					<a href="audreysaudjhana.github.io/sublimebiodata" target="_blank" class="btn btn-dark">View more</a>
+    					<p class="card-text">Cuisine and tourism themed Website.</p>
+    					<a href="audreysaudjhana.github.io/audreys" target="_blank" class="btn btn-dark">View more</a>
   					</div>
 				</div>
 			</div>
