--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   					<img src="img/web-3.png" class="card-img-top" alt="Sublime Biodata">
   					<div class="card-body">
     					<p class="card-text">Website for biodata of group, biodata from Sublime Group (Sublime's Biodata).</p>
-    					<a href="audreysaudjhana.github.io/sublimebiodata" target="_blank" class="btn btn-dark">View more</a>
+    					<a href="wikipedia.com" target="_blank" class="btn btn-dark">View more</a>
   					</div>
 				</div>
 			</div>
@@ -72,7 +72,7 @@
   					<img src="img/web-2.png" class="card-img-top" alt="Sublime CV">
   					<div class="card-body">
     					<p class="card-text">Website for CV of group, biodata from Sublime Group (Sublime's CV).</p>
-    					<a href="audreysaudjhana.github.io/sublimecv" target="_blank" class="btn btn-dark">View more</a>
+    					<a href="wikipedia.com" target="_blank" class="btn btn-dark">View more</a>
   					</div>
 				</div>
 			</div>
@@ -82,7 +82,7 @@
   					<img src="img/web-3.png" class="card-img-top" alt="Sublime Biodata">
   					<div class="card-body">
     					<p class="card-text">Cuisine and tourism themed Website.</p>
-    					<a href="audreysaudjhana.github.io/audreys" target="_blank" class="btn btn-dark">View more</a>
+    					<a href="wikipedia.com" target="_blank" class="btn btn-dark">View more</a>
   					</div>
 				</div>
 			</div>
