--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   					<img src="img/web-3.png" class="card-img-top" alt="Sublime Biodata">
   					<div class="card-body">
     					<p class="card-text">Cuisine and tourism themed Website.</p>
-    					<a href="http://audreysaudjhana.github.io/sublimebiodata" target="_blank" class="btn btn-dark">View more</a>
+    					<a href="http://audreysaudjhana.github.io/audreys" target="_blank" class="btn btn-dark">View more</a>
   					</div>
 				</div>
 			</div>
