--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 			<div class="col-md-4">
 				<div class="card" style="width: 100%;">
-  					<img src="img/web-1.png" class="card-img-top" alt="Sublime Biodata">
+  					<img src="img/web-3.png" class="card-img-top" alt="Cuisine & Tourism Web">
   					<div class="card-body">
     					<p class="card-text">Cuisine and tourism themed Website.</p>
     					<a href="http://audreysaudjhana.github.io/audreys" target="_blank" class="btn btn-dark">View more</a>
