--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>My Biodata</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/style.css" type="text/css" >
+	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<title>My Biodata</title>
 </head>
 
 <body>
@@ -82,7 +83,7 @@
   					<img src="img/web-3.png" class="card-img-top" alt="Cuisine & Tourism Web">
   					<div class="card-body">
     					<p class="card-text">Cuisine and tourism themed Website.</p>
-    					<a href="http://audreysaudjhana.github.io/audreys" target="_blank" class="btn btn-dark">View more</a>
+    					<a href="https://audreysaudjhana.github.io/cuisinentourism/" target="_blank" class="btn btn-dark">View more</a>
   					</div>
 				</div>
 			</div>
