Update new portfolio

--- a/index.html
+++ b/index.html
@@ -90,6 +90,39 @@
 		</div>	
 	</div>
 
+	<div class="row">
+			<div class="col-md-4">
+				<div class="card" style="width: 100%;">
+  					<img src="img/web-1.png" class="card-img-top" alt="Sublime Biodata">
+  					<div class="card-body">
+    					<p class="card-text">Samsung Company Profile made by Sublime Team.</p>
+    					<a href="http://audreysaudjhana.github.io/samsungcompanyprofile" target="_blank" class="btn btn-dark">View more</a>
+  					</div>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<div class="card" style="width: 100%;">
+  					<img src="img/web-2.png" class="card-img-top" alt="Sublime CV">
+  					<div class="card-body">
+    					<p class="card-text">LG Company Profile made by Audrey Saudjhana.</p>
+    					<a href="http://audreysaudjhana.github.io/lgcompanyprofile" target="_blank" class="btn btn-dark">View more</a>
+  					</div>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<div class="card" style="width: 100%;">
+  					<img src="img/web-3.png" class="card-img-top" alt="Cuisine & Tourism Web">
+  					<div class="card-body">
+    					<p class="card-text">Music themed Website. Ongoing project ....</p>
+    					<a href="https://audreysaudjhana.github.io/mosaikmusik/" target="_blank" class="btn btn-dark">View more</a>
+  					</div>
+				</div>
+			</div>
+		</div>	
+	</div>
+
 	<footer class="text-center">
 			<p>Copyright &copy; Audrey Saudjhana 2019</p>
 	</footer>
