--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div class="card" style="width: 100%;">
   					<img src="img/web-3.png" class="card-img-top" alt="Cuisine & Tourism Web">
   					<div class="card-body">
-    					<p class="card-text">Cuisine and tourism themed Website.</p>
+    					<p class="card-text">Cuisine and tourism themed website by Audrey Saudjhana.</p>
     					<a href="https://audreysaudjhana.github.io/cuisinentourism/" target="_blank" class="btn btn-dark">View more</a>
   					</div>
 				</div>
@@ -92,7 +92,7 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="card" style="width: 100%;">
-  					<img src="img/web-1.png" class="card-img-top" alt="Sublime Biodata">
+  					<img src="img/web-4.png" class="card-img-top" alt="Sublime Biodata">
   					<div class="card-body">
     					<p class="card-text">Samsung Company Profile made by Sublime Team.</p>
     					<a href="http://audreysaudjhana.github.io/samsungcompanyprofile" target="_blank" class="btn btn-dark">View more</a>
@@ -102,7 +102,7 @@
 
 			<div class="col-md-4">
 				<div class="card" style="width: 100%;">
-  					<img src="img/web-2.png" class="card-img-top" alt="Sublime CV">
+  					<img src="img/web-5.png" class="card-img-top" alt="Sublime CV">
   					<div class="card-body">
     					<p class="card-text">LG Company Profile made by Audrey Saudjhana.</p>
     					<a href="http://audreysaudjhana.github.io/lgcompanyprofile" target="_blank" class="btn btn-dark">View more</a>
@@ -112,9 +112,9 @@
 
 			<div class="col-md-4">
 				<div class="card" style="width: 100%;">
-  					<img src="img/web-3.png" class="card-img-top" alt="Cuisine & Tourism Web">
+  					<img src="img/web-6.png" class="card-img-top" alt="Cuisine & Tourism Web">
   					<div class="card-body">
-    					<p class="card-text">Music themed Website. Ongoing project ....</p>
+    					<p class="card-text">Music themed website. Ongoing project from Sublime Team.</p>
     					<a href="https://audreysaudjhana.github.io/mosaikmusik/" target="_blank" class="btn btn-dark">View more</a>
   					</div>
 				</div>
