--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</div>
 
 		<div class="row">
-			<div class="col-sm-6"><p class="text-justify">My name is Audrey Saudjhana, was born in Batam, 16th November 2001. First and last child at home. I went to PG Bodhi Dharma Batam (Play Group), TK Bodhi Dharma Batam (Taman Kanak-kanak/Kindergarten), SD Bodhi Dharma Batam (Primary School), SMP Bodhi Dharma Batam (Junior High School), and SMA Bodhi Dharma Batam (Senior High School. Now, I am student in Universitas Internasional Batam (UIB) and majored in Information System.</p>
+			<div class="col-sm-6"><p class="text-justify">My name is Audrey Saudjhana, was born in Batam, 16th November 2001. First and last child at home. I went to PG Bodhi Dharma Batam (Play Group), TK Bodhi Dharma Batam (Taman Kanak-kanak/Kindergarten), SD Bodhi Dharma Batam (Sekolah Dasar/Primary School), SMP Bodhi Dharma Batam (Sekolah Menengah Pertama/Junior High School), and SMA Bodhi Dharma Batam (Sekolah Menengah Atas/Senior High School). Now, I am student in Universitas Internasional Batam (UIB) and majored in Information System.</p>
 			</div>
 
 			<div class="col-sm-6"><p  class="text-justify">My hobbies are swimming and badminton. I like both watching the badminton's matches and play the sport, because badminton is really fun for me. Beside that, I am passionate about learning new things, especially coding and programming related.</p>
