Update other portfolio

--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@
   					</div>
 				</div>
 			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-6">
+				<h2 class="text-justify">Other Portfolio</h2>
+			</div>
+
+			<div class="col-sm-6">
+				<p  class="text-justify">There is other my portfolio which you can view more in here ...</p>
+				<a href="https://s.id/audreyapple" target="_blank" class="btn btn-dark btn-lg btn-block">View more</a>
+			</div>
 		</div>	
 	</div>
 
